--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,10 @@ a {
     color: black;
 }
 
+input {
+    font-family: 'Ubuntu';
+}
+
 hr {
     height: 1px;
     background-color: gray;
@@ -66,6 +70,8 @@ label:hover {
     background-color: #1167b8;
     border: 1px solid transparent;
     border-radius: 3px;
+    height: 26px;
+    text-align: center;
 }
 
 .button-icon:hover {
@@ -161,6 +167,7 @@ label:hover {
     padding: 4px;
     border: 1px solid #aaaaaa;
     border-radius: 3px;
+    height: auto;
 }
 
 #search_div {
