--- a/static/style.css
+++ b/static/style.css
@@ -235,6 +235,10 @@ h4 {
     background-color: #2EAE2E;
 }
 
+/*
+Change le style de certains éléments si
+le navigateur a un thème sombre.
+*/
 @media (prefers-color-scheme: dark) {
     body, textarea {
         background-color: #111111;
